[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.9.16"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
rust-version = "1.57.0" # custom profiles
readme = "README.md"

[dependencies]
polkadot-cli = { path = "cli", features = [ "kusama-native", "westend-native", "rococo-native" ]  }
color-eyre = { version = "0.5.11", default-features = false }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "2.0.2"
nix = "0.23.1"
tempfile = "3.2.0"
tokio = "1.15.0"
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/client",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/overseer/overseer-gen",
	"node/overseer/overseer-gen/proc-macro",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metrics",
	"node/metered-channel",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

# We want to be able to build the bridge relayer without pulling it (and all of its
# dependencies into the Polkadot workspace)
exclude = ["bridges/relays/bin-substrate", "bridges/bin/rialto/runtime", "bridges/bin/millau/runtime"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
[patch."https://github.com/paritytech/substrate"]
node-template ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-benchmarking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-procedural ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-procedural-tools ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-procedural-tools-derive ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-arithmetic ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-debug-derive ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-std ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-core ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-core-hashing ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-externalities ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-storage ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime-interface ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime-interface-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-tracing ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-wasm-interface ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-io ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-keystore ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-state-machine ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-panic-handler ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-trie ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-application-crypto ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-api-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-version ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-core-hashing-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-version-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-test-primitives ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-runtime-client ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-block-builder ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-client-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-prometheus-endpoint ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-executor ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-executor-common ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-allocator ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-maybe-compressed-blob ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-serializer ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-executor-wasmi ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-executor-wasmtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-runtime-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-sandbox ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-tasks ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-wasm-builder ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-tracing ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-rpc-server ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-tracing-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-blockchain ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-inherents ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-database ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-runtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-system ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-system-rpc-runtime-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-babe ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-authorship ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-authorship ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-session ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-timestamp ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-timestamp ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-session ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-staking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus-babe ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus-slots ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus-vrf ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-election-provider-support ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-npos-elections ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-npos-elections-solution-type ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-utils ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-utils-derive ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-service ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-chain-spec ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-chain-spec-derive ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-network ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
fork-tree ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-utils ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-peerset ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-finality-grandpa ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-telemetry ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-client-db ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-state-db ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-informant ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-transaction-pool-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-keystore ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-offchain ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-offchain ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-transaction-pool ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-transaction-pool ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-runtime-transaction-pool ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-rpc-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-block-builder ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-transaction-storage-proof ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-balances ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-transaction-payment ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-offences ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-staking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-bags-list ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-staking-reward-curve ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus-aura ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-keyring ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-client ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime-interface-test-wasm ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-benchmarking-cli ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-cli ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-template-runtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-executive ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-system-benchmarking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-aura ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-grandpa ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-randomness-collective-flip ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-sudo ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-template ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-transaction-payment-rpc-runtime-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-transaction-payment-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-basic-authorship ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-proposer-metrics ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-aura ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-slots ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-network-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-finality-grandpa ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-network-gossip ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-frame-rpc-system ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-build-script-utils ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-bench ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-primitives ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-runtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-try-runtime ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-asset-tx-payment ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-assets ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-authority-discovery ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-authority-discovery ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-bounties ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-treasury ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-child-bounties ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-collective ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-contracts ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-contracts-primitives ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-contracts-proc-macro ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-utility ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-contracts-rpc-runtime-api ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-democracy ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-scheduler ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-preimage ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-election-provider-multi-phase ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-elections-phragmen ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-gilt ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-identity ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-im-online ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-indices ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-lottery ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-test-pallet ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-membership ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-mmr ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-mmr-primitives ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-multisig ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-offences-benchmarking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-proxy ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-recovery ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-session-benchmarking ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-society ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-tips ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-transaction-storage ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-uniques ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-vesting ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-testing ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-executor ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-cli ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-inspect ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-contracts-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-mmr-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-babe ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-epochs ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-babe-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-finality-grandpa-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-sync-state-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-authority-discovery ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-uncles ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
try-runtime-cli ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
remote-externalities ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-service-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-frame-cli ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
chain-spec-builder ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
subkey ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
beefy-gadget ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
beefy-primitives ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
beefy-gadget-rpc ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-manual-seal ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sc-consensus-pow ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-consensus-pow ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-atomic-swap ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-beefy ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-beefy-mmr ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
beefy-merkle-tree ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-example-basic ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-example-offchain-worker ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-example-parallel ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-nicks ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-node-authorization ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-scored-pool ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-staking-reward-fn ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
frame-support-test-compile-pass ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-bags-list-remote-tests ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
pallet-bags-list-fuzzer ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-api-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-application-crypto-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-arithmetic-fuzzer ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-npos-elections-fuzzer ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime-interface-test ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
sp-runtime-interface-test-wasm-deprecated ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-test-utils-test-crate ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
substrate-frame-rpc-support ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
generate-bags ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }
node-runtime-generate-bags ={git = "https://github.com/ComposableFi/substrate", branch = "mmr-polkadot-v0.9.16" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }

[package.metadata.spellcheck]
config = "./scripts/gitlab/spellcheck.toml"
